--- a/style.css
+++ b/style.css
@@ -84,6 +84,13 @@ button {
   justify-content: center;
 }
 
+.hero {
+  padding: 100px 40px;
+  height: 100vh;
+  background: url(./video/santa.mp4) no-repeat center;
+  background-size: cover;
+}
+
 @keyframes spin {
   from { transform: translateY(0); }
   to { transform: translateY(var(--spin-distance)); }
