--- a/style.css
+++ b/style.css
@@ -84,11 +84,23 @@ button {
   justify-content: center;
 }
 
+.container {
+  max-width: 1460px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .hero {
   padding: 100px 40px;
+  width: 100%;
   height: 100vh;
   background: url(../video/santa.mp4) no-repeat center;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes spin {
