--- a/style.css
+++ b/style.css
@@ -101,6 +101,18 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.hero .backgroundSanta {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 @keyframes spin {
