--- a/style.css
+++ b/style.css
@@ -95,8 +95,7 @@ button {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url(../video/santa.mp4) no-repeat center;
-  background-size: cover;
+  background: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -116,6 +115,7 @@ button {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: -1;
 }
 
 @keyframes spin {
