--- a/style.css
+++ b/style.css
@@ -1,19 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Rubik+Gemstones&display=swap');
+
+
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Mountains of Christmas", serif;
+  font-weight: 400;
   background: #f2f2f2;
   text-align: center;
 }
 
 input, button {
-  padding: 10px;
+  padding: 14px 30px;
   font-size: 16px;
   margin-top: 10px;
+  background: #fff;
+  color: #f00;
+  border: 1px solid #f00;
+  font-weight: 600;
 }
 
 h1,
 h2 {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Rubik Gemstones", system-ui;
+  font-weight: 500;
+  color: #f00;
 }
 
 button {
@@ -127,7 +144,12 @@ button {
 }
 
 .hero .container .login p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
   color: #fff;
+  font-family: 'Poppins', sans-serif;
 }
 
 .hero .container .login .unlockForm {
