--- a/style.css
+++ b/style.css
@@ -192,3 +192,27 @@ button {
   to { transform: translateY(var(--spin-distance)); }
 }
 
+
+@media(max-width: 767px) {
+  .hero .container h1 {
+  font-size: 40px;
+  line-height: 1.1em;
+  color: #f00;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  margin-bottom: 20px;
+}
+
+.hero .container h1 svg {
+  margin-bottom: 15px;
+}
+
+.hero .container #login p {
+  gap: 10px;
+  line-height: 1.5em;
+  flex-direction: column;
+}
+}
