--- a/style.css
+++ b/style.css
@@ -180,6 +180,17 @@ button {
   margin-top: 30px;
 }
 
+.hero .backgroundSantaMobile {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 .hero .backgroundSantaDesktop {
   width: 100%;
   display: flex;
